--- a/style.css
+++ b/style.css
@@ -11,12 +11,18 @@ html {
 .container {
   width: 100%;
   height: 50%;
-  background-image: url(1.jpg);
+  background-color: rgba(0, 0, 0, 0.5);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   position: relative;
 }
+
+/* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url(1.jpg); */
+
 .container .cont {
   position: absolute;
   top: 30%;
